<resources>
    <string name="app_name">Slatt</string>
    <string name="join_millions_of_users_on_slatt_sharing_and_hanging_out_in_servers">Join millions of users on Slatt, sharing and hanging out in servers.</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="join_slatt">Join Slatt</string>
    <string name="email">Email</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password</string>
    <string name="a_very_strong_password">A very strong password</string>
    <string name="show">Show</string>
    <string name="create_a_username">Create a Username</string>
    <string name="use_your_imagination_not_your_password">Use your imagination, not your password</string>
    <string name="keep_it_short_keep_it_spicy">Keep it short, keep it spicy.</string>
    <string name="your_username_is_your_first_impression_here_mysterious_funny_or_bold_it_s_up_to_you_just_remember_every_username_is_unique_so_make_yours_stand_out">Your username is your first impression here, mysterious, funny or bold, it\'s up to you. Just remember, every username is unique, so make yours stand out!</string>
    <string name="create_username">Create Username</string>
</resources>